--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     let messages = []
     let end = false
 
-    const SELECTED_MODEL = 'Llama-3-8B-Instruct-q4f32_1-MLC-1k'
+    const SELECTED_MODEL = 'Phi-3.5-mini-instruct-q4f16_1-MLC-1k'
 
     const engine = await CreateWebWorkerMLCEngine(
       new Worker('./worker.js', { type: 'module' }),
